tests/invalid/generic_apply_reject_constructor.wio
use std::traits as traits;

@Apply(traits::IsNumeric<T>)
object NumberBox<T> {
    public value: T;

    OnConstruct(value: T) {
        self.value = value;
    }
}

fn Entry() -> i32 {
    let box = NumberBox<string>("bad");
    return box.value.Length();
}
